# softnat

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cc  softnat  softnat.cc  softnat.h  trans.h
